--- a/index.html
+++ b/index.html
@@ -1,1 +1,17 @@
-<!DOCTYPE html><html lang=en><head><meta charset=utf-8><meta http-equiv=X-UA-Compatible content="IE=edge"><meta name=viewport content="width=device-width,initial-scale=1"><link rel=icon href=/vuejs-demo/favicon.ico><link rel=stylesheet href="//fonts.googleapis.com/css?family=Roboto:400,500,700,400italic|Material+Icons"><title>Vuejs Demo</title><link href=/vuejs-demo/css/app.d855c350.css rel=preload as=style><link href=/vuejs-demo/css/chunk-vendors.5699e6ca.css rel=preload as=style><link href=/vuejs-demo/js/app.03ae7471.js rel=preload as=script><link href=/vuejs-demo/js/chunk-vendors.37221c73.js rel=preload as=script><link href=/vuejs-demo/css/chunk-vendors.5699e6ca.css rel=stylesheet><link href=/vuejs-demo/css/app.d855c350.css rel=stylesheet></head><body><noscript><strong>We're sorry but codesandbox doesn't work properly without JavaScript enabled. Please enable it to continue.</strong></noscript><div id=app></div><script src=/vuejs-demo/js/chunk-vendors.37221c73.js></script><script src=/vuejs-demo/js/app.03ae7471.js></script></body></html>
+<!DOCTYPE html>
+<html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <link rel="icon" href="/assets/favicon.db74ab0b.ico" />
+    <link href="https://fonts.googleapis.com/icon?family=Ubuntu|Material+Icons" rel="stylesheet">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Vite App</title>
+    <script type="module" crossorigin src="/assets/index.f3e385cb.js"></script>
+    <link rel="stylesheet" href="/assets/index.9c16b2ef.css">
+  </head>
+  <body>
+    <div id="app"></div>
+    
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/velocity/1.2.3/velocity.min.js"></script>
+  </body>
+</html>
