deploy: b2323bdf7684746c2e9b2430fa43a068c65fbbe7

--- a/index.html
+++ b/index.html
@@ -2,12 +2,12 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" href="/assets/favicon.db74ab0b.ico" />
+    <link rel="icon" href="/vuejs-demo/assets/favicon.db74ab0b.ico" />
     <link href="https://fonts.googleapis.com/icon?family=Ubuntu|Material+Icons" rel="stylesheet">
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Vite App</title>
-    <script type="module" crossorigin src="/assets/index.f3e385cb.js"></script>
-    <link rel="stylesheet" href="/assets/index.9c16b2ef.css">
+    <script type="module" crossorigin src="/vuejs-demo/assets/index.1ee9fa5e.js"></script>
+    <link rel="stylesheet" href="/vuejs-demo/assets/index.9c16b2ef.css">
   </head>
   <body>
     <div id="app"></div>
